[workspace]
resolver = "2"
members = ["logger"]

[workspace.dependencies]
# Log framework
log = { version = "0.4", features = ["std"] }
thiserror = "2"

# Utility
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"


# Http
reqwest = { version = "0.12", features = ["json"] }
