[workspace]
resolver = "2"
members = [
  "appflow",
  "appflow-std",
  "appruntime",
  "logger",
  "macros",
  "sysdir",
  "tcpservice",
  "unixservice",
]

[workspace.dependencies]
# Log framework
log = { version = "0.4", features = ["std"] }
thiserror = "2"

tokio = { version = "1.41", features = ["full"] }  # Utility
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
dirs = "5"
indexmap = "2.6"

# Http
reqwest = { version = "0.12", features = ["json","rustls-tls"], default-features = false}
