[package]
name = "appflow"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
log.workspace = true
thiserror.workspace = true
indexmap.workspace = true

reqwest = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
update = ["reqwest", "serde", "serde_json"]
